# labib

./: .gitignore  ABOUT.md  LICENSE  README.md  agent_logs.jsonl  first-try.md  pyproject.toml
examples/: auto_orchestration.py  orchestration.py  orchestration_ollama.py  quickstart.py
src/labib/: __init__.py  cli.py  ui_app.py
src/labib/tools/: __init__.py  calculator.py  filesystem.py  web.py
src/majdk/: __init__.py  agent.py  auto.py  cli.py  mcp.py  memory.py  models.py  orchestrator.py  ui_app.py
src/majdk/tools/: __init__.py  calculator.py  filesystem.py  web.py
