[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "labib"
version = "0.1.0"
description = "Lightweight AI Agent SDK with tool support"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Oussama EL ALLAM", email = "o.elallam@majdai.ai"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
ollama = ["requests>=2.25.0"]
web = ["requests>=2.25.0", "beautifulsoup4>=4.9.0"]
ui = ["streamlit>=1.28.0"]
mcp = ["mcp>=0.1.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
all = [
    "openai>=1.0.0",
    "requests>=2.25.0",
    "beautifulsoup4>=4.9.0",
    "streamlit>=1.28.0",
    "mcp>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/majdaitech/labib"
Repository = "https://github.com/majdaitech/labib"
Documentation = "https://github.com/majdaitech/labib#readme"
"Bug Tracker" = "https://github.com/majdaitech/labib/issues"

[project.scripts]
majdk = "majdk.cli:main"
majdk-ui = "majdk.ui_app:run_app"
labib = "labib.cli:main"
labib-ui = "labib.ui_app:run_app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
